--- a/viewer.html
+++ b/viewer.html
@@ -218,12 +218,12 @@
                 <span data-l10n-id="open_file_label">Open</span>
               </button>
 
-              <button id="print" class="toolbarButton print hiddenMediumView" title="Print" tabindex="33"
+              <button id="print" class="toolbarButton print" title="Print" tabindex="33"
                 data-l10n-id="print">
                 <span data-l10n-id="print_label">Print</span>
               </button>
 
-              <button id="download" class="toolbarButton download hiddenMediumView" title="Download" tabindex="34"
+              <button id="download" class="toolbarButton download" title="Download" tabindex="34"
                 data-l10n-id="download">
                 <span data-l10n-id="download_label">Download</span>
               </button>
@@ -232,9 +232,9 @@
                 <span data-l10n-id="bookmark_label">Current View</span>
               </a>
 
-              <div class="verticalToolbarSeparator hiddenSmallView"></div>
+              <div class="verticalToolbarSeparator hiddenSmallView hidden"></div>
 
-              <button id="secondaryToolbarToggle" class="toolbarButton" title="Tools" tabindex="36"
+              <button id="secondaryToolbarToggle" class="toolbarButton hidden" title="Tools" tabindex="36"
                 data-l10n-id="tools">
                 <span data-l10n-id="tools_label">Tools</span>
               </button>
